add couple of CaravelCong methods, use them in missing proj determination

--- a/caravel/jinja_templates/index.html
+++ b/caravel/jinja_templates/index.html
@@ -30,7 +30,7 @@
 	{% if missing_projects is not none %}
 		<div class="alert alert-warning" role="alert">
 			<button type="button" class="close" data-dismiss="alert">&times;</button>
-			The following <b>{{ missing_projects|length }}</b> files are missing and not listed below:
+			<b>{{ missing_projects|length }}</b> files are missing and are not listed below:
 			<ul style="padding-left: 30px">
 				{% for mp in missing_projects %}
 					<li><code>{{ mp }}</code></li>
