--- a/caravel/jinja_templates/index.html
+++ b/caravel/jinja_templates/index.html
@@ -47,7 +47,7 @@
 						<form id="select_project" class="form" method="POST" action="{{ url_for('process') }}">
 							<div class="form-group row">
 								<input name="_csrf_token" type="hidden" value="{{ csrf_token() }}">
-								<div class="col-xl-12">
+								<div class="col">
 									<div class="list-group">
 										{% if reset_btn is not none %}
 											<div class="alert alert-secondary" role="alert">
@@ -60,12 +60,12 @@
 										{% else %}
 											{% set cls = "list-group-item list-group-item-action disabled" %}
 										{% endif %}
-										{% for p in projects %}
+										{% for p in cc.projects.keys() %}
 											{% if loop.index == selected_id | int  %}
 												{% set cls = "list-group-item list-group-item-action list-group-item-secondary" %}
 											{% endif %}
 											<button type="submit" name="select_project" class="{{ cls }}" value="{{ p }};{{ loop.index }}">
-												{{ p }}
+												{{ cc.projects[p].name }}
 											</button>
 										{% endfor %}
 									</div>
