--- a/caravel/jinja_templates/process.html
+++ b/caravel/jinja_templates/process.html
@@ -134,7 +134,7 @@
 				<div class="card border-light mb-3" style="display:inline-block;">
 					<div class="card-header">
 						<b>Project <code>{{ p_info["name"] }}</code> sample table</b>
-						<span class="badge badge-primary" data-toggle="modal" data-target="#metadataModal" style="cursor: pointer; align-self: right;">Show metadata</span>
+						<span class="badge badge-primary float-right" data-toggle="modal" data-target="#metadataModal" style="cursor: pointer; align-self: right;">Show metadata</span>
 					</div>
 					<div class="card-body" id="status_table">
 						After <code>looper run</code> click "CHECK STATUS" to update
