--- a/caravel/jinja_templates/index.html
+++ b/caravel/jinja_templates/index.html
@@ -24,6 +24,21 @@
 			});
 		});
 	</script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+    <script type="text/javascript">
+        $.noConflict();
+        $( document ).ready( function () {
+            console.log("window loaded");
+            $('#projects-table').DataTable({
+                "pageLength": -1,
+                "lengthMenu": [ [5, 10, 25, -1], [5, 10, 25, "All"] ]
+            });
+        } );
+    </script>
 {% endblock %}
 {% block title %}Index{% endblock %}
 {% block content %}
@@ -51,8 +66,8 @@
 				{% endif %}
 				<div class="card">
 					<div class="card-header">
-						<div class="row mt-1">
-							<div class="col-3">
+						<div class="row">
+							<div class="col-3 mt-1">
 								<b>Select a project</b>
 							</div>
 							<div class="col-9">
@@ -112,3 +127,4 @@
 		</div>
 	</div>
 {% endblock %}
+
