--- a/caravel/jinja_templates/index.html
+++ b/caravel/jinja_templates/index.html
@@ -24,31 +24,9 @@
 			});
 		});
 	</script>
-    <script src="https://code.jquery.com/jquery-3.3.1.js" type="text/javascript"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
     <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
-    <script type="text/javascript">
-        $.noConflict();
-        $( document ).ready( function () {
-            console.log("window loaded");
-            $('#projects-table').DataTable({
-                "pageLength": -1,
-                "lengthMenu": [ [5, 10, 25, -1], [5, 10, 25, "All"] ],
-				"aoColumns": [
-					{ "bSortable": true },
-					{ "bSortable": true },
-					{ "bSortable": true },
-					{ "bSortable": true },
-					{ "bSortable": true },
-					{ "bSortable": true },
-					{ "bSortable": false }
-				],
-
-            });
-        } );
-    </script>
+	<link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.css">
+	<script src="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.js"></script>
 {% endblock %}
 {% block title %}Index{% endblock %}
 {% block content %}
@@ -98,12 +76,13 @@
 						</div>
 					</div>
 					<div class="card-body">
-						<table id="projects-table" class="table table-bordered table-hover table-sm mb-0 btn-table" style="font-size:13px; width:100%;">
+						<table id="projects-table" data-pagination="true" data-toggle="table" data-search="true" data-show-columns="true" class="table table-bordered table-sm mb-0 btn-table" style="font-size:13px; width:100%;">
 							<thead>
 								<tr>
+									<th></th>
 									<th class="text-nowrap text-center">Project name</th>
-									<th class="text-nowrap text-center">Sample count</th>
 									<th class="text-nowrap text-center">Subproject count</th>
+									<th class="text-nowrap text-center">Sample count</th>
 									<th class="text-nowrap text-center">Protocols</th>
                                     <th class="text-nowrap text-center">Inputs size</th>
 									<th class="text-nowrap text-center">Last modified</th>
@@ -130,16 +109,19 @@
 										{% set row_class = "table-active" %}
 									{% endif %}
 									<tr class="{{ row_class }}" valign="middle">
+										<td>
+											<i class="fa fa-caret-right fa-2x" aria-hidden="true"></i>
+										</td>
 										<td class="text-nowrap text-center">
 											<button type="submit" class="{{ class }}" name="select_project" value="{{ p }};{{ loop.index }}">
 												{{ cc.projects[p].name }}
 											</button>
 										</td>
 										<td class="text-nowrap text-center">
-											{{ cc.projects[p].num_samples }}
+											{{ cc.projects[p].num_sp }}
 										</td>
 										<td class="text-nowrap text-center">
-											{{ cc.projects[p].num_sp }}
+											{{ cc.projects[p].num_samples }}
 										</td>
 										<td class="text-nowrap text-center">
 											{{ cc.projects[p].protocols }}
